--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "vindite/selene",
+    "name": "ovalves/selene",
     "type": "project",
     "description": "simple microframework",
     "license": "MIT",
