--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "psr/http-message": "^1.0.1",
         "psr/http-server-middleware": "^1.0",
         "symfony/console": "5.3.2",
+        "symfony/http-foundation": "^5.1",
         "filp/whoops": "2.13.0"
     },
     "require-dev": {},
