--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "psr/http-server-middleware": "^1.0",
         "symfony/console": "5.3.2",
         "symfony/http-foundation": "^5.1",
-        "filp/whoops": "2.13.0"
+        "filp/whoops": "2.13.0",
+        "symfony/dotenv": "^5.3"
     },
     "require-dev": {},
     "suggest": {
